--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ h1 {
 
 h2 {
     font-size: 1.5em;
-    padding-bottom: 1em;
+    margin-top: 0.5em;
+    padding-bottom: 0.5em;
 }
 main { 
     display: grid;
